Change History
--------------

This file contains a list of all changes starting after the release of
sox-11gamma.

sox-14.0.0
----------

  File formats:

  o Added support for ADPCM-encoded PRC files, based on Danny Smith's
    rec2wav and sndcmp.
  o Added AMR-WB format.  (robs)
  o Added M3U & PLS playlist formats [FR# 1667341] (Note: SHOUTcast PLS
    is only partially supported).  (robs)
  o Added libao support.  (Reuben Thomas)
  o Added read-only ffmpeg support.  (Reuben Thomas)
  o Added LPC-10 support.  (Reuben Thomas)
  o FLAC: added seekable decoding; added seek-table generation; don't
    crash when encoding with no comment.  (robs)

  Effects:

  o --octave option changed to --plot; can now also use gnuplot to
    plot effect transfer function.  (robs)
  o Added soft-knee companding.  (robs)
  o Show (with --plot) compand transfer function.  (robs)
  o Allow e.g. "vol 6dB" (as well as "vol 6 dB").  (robs)
  o Changed deemph filter from 1st order to 2nd order for
    better accuracy.  (robs)
  o Add option to silence effect to leave periods of silence
    in and only strip out extra silence.   (Mark Schreiber)

  Other new features:

  o Show (with -S) if clipping is occurring.  (robs)
  o Added internet input file support (needs wget).  (robs)
  o Made it possible to build without sound drivers.  (Reuben Thomas)

  Bug fixes:

  o Fix (m)compand transfer function non-linearities; fix compand
    drain volume.  (robs)
  o Fix crash with pan effect.  (robs)
  o Add missing RM define to Makefiles so installs work.
   (Bug# 1666599) (cbagwell)
  o Fix I/O performance regression in 13.0.0.  (Reuben Thomas)
  o Fix displayed times when playing a file and using trim.  (robs)

  Internal improvements:

  o Renamed libst to libsox for name recongition and to avoid
    duplications with other existing libst libraries. (Reuben Thomas)
  o Got rid of several hundred compiler warnings.  (robs, Reuben Thomas)